# motion_planning_moveit_ur

./: .gitignore  CMakeLists.txt  commands.txt  package.xml  readme.md
launch/: cartesian_space_trajectory.launch.py  linear_cartesian_space_trajectory.launch.py  motion_planning_moveit.launch.py  motion_planning_server.launch.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ur/share/ament_index/resource_index/parent_prefix_path/: ur
ros2_ws/install/ur/share/ur/: local_setup.sh  package.bash  package.sh  package.zsh
ros2_ws/install/ur/share/ur/cmake/: urConfig.cmake
ros2_ws/install/ur_bringup/share/ur_bringup/: package.sh
ros2_ws/install/ur_calibration/lib/ur_calibration/: calibration_correction
ros2_ws/install/ur_calibration/share/ament_index/resource_index/parent_prefix_path/: ur_calibration
ros2_ws/install/ur_calibration/share/ur_calibration/: local_setup.sh  package.bash  package.sh  package.zsh
ros2_ws/install/ur_controllers/share/ur_controllers/: package.sh
ros2_ws/install/ur_controllers/share/ur_controllers/cmake/: ament_cmake_export_dependencies-extras.cmake  ur_controllersConfig.cmake
ros2_ws/install/ur_dashboard_msgs/include/ur_dashboard_msgs/ur_dashboard_msgs/msg/detail/: robot_mode__struct.hpp  safety_mode__struct.hpp
ros2_ws/install/ur_dashboard_msgs/local/lib/python3.10/dist-packages/ur_dashboard_msgs-2.2.6-py3.10.egg-info/: PKG-INFO
ros2_ws/install/ur_dashboard_msgs/share/ur_dashboard_msgs/: package.sh
ros2_ws/install/ur_dashboard_msgs/share/ur_dashboard_msgs/cmake/: ur_dashboard_msgsConfig.cmake
ros2_ws/install/ur_description/share/ur_description/: local_setup.sh  package.sh
ros2_ws/install/ur_description/share/ur_description/cmake/: ur_descriptionConfig.cmake
ros2_ws/install/ur_moveit_config/share/ament_index/resource_index/parent_prefix_path/: ur_moveit_config
ros2_ws/install/ur_moveit_config/share/ur_moveit_config/: package.sh
ros2_ws/install/ur_moveit_config/share/ur_moveit_config/cmake/: ur_moveit_configConfig.cmake
ros2_ws/install/ur_robot_driver/lib/ur_robot_driver/: controller_stopper_node  dashboard_client  ur_ros2_control_node
ros2_ws/install/ur_robot_driver/local/lib/python3.10/dist-packages/ur_robot_driver-2.2.6-py3.10.egg-info/: PKG-INFO
ros2_ws/install/ur_robot_driver/share/ament_index/resource_index/package_run_dependencies/: ur_robot_driver
ros2_ws/install/ur_robot_driver/share/ur_robot_driver/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/motion_planning_moveit/: CMakeLists.txt
ros2_ws/src/motion_planning_moveit/launch/: joint_space_trajectory.launch.py
ros2_ws/src/motion_planning_moveit/src/: joint_space_trajectory.cpp  motion_planning_moveit.cpp
src/: cartesian_space_trajectory.cpp  joint_space_trajectory.cpp  linear_cartesian_space_trajectory.cpp  motion_planning_moveit.cpp  motion_planning_server.cpp  trajectory_planning_service.cpp
